Bug 12183 - Cannot print on CUPS printers with umlauts in name
Summary: Cannot print on CUPS printers with umlauts in name
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.4.5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-26 16:38 UTC by Mario Lipinski
Modified: 2016-12-20 09:05 UTC (History)
6 users (show)

See Also:


Attachments
patch for 4.5 (8.39 KB, patch)
2016-11-11 08:40 UTC, Andreas Schneider
jra: review+
Details
patch for 4.4 (8.39 KB, patch)
2016-11-11 08:41 UTC, Andreas Schneider
jra: review+
Details
additional fix to be able to build on systems with older CUPS version (deleted)
2016-12-05 10:09 UTC, Karolin Seeger
no flags Details
additional patch for 4.5 and 4.4 (1023 bytes, patch)
2016-12-06 09:06 UTC, Andreas Schneider
kseeger: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Lipinski 2016-08-26 16:38:04 UTC
A while ago I already filed this bug with debian at https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=822571 and would like to forward it to Samba now. The issue is still present in current Samba 4.4.5.

I am experiencing problems while printing to printers with umlauts in 
name. It seems like samba cannot communicate with CUPS properly about 
printer names with umlauts.

I tested with Samba 2:4.4.0+dfsg-1 sources from experimental backported 
for Jessie, but I also observed the problems with 2:4.2.10+dfsg-0+deb8u2.

From the logs:

Apr 25 14:41:47 iserv smbd[13162]: Unable to get jobs for 
ipp://localhost/printers/Täääst - client-error-not-found
Apr 25 14:41:56 iserv smbd_audit: Unable to print file to Täst - 
client-error-not-found
Apr 25 14:42:03 iserv smbd_audit: Unable to print file to Täääst - 
client-error-not-found
Apr 25 14:42:06 iserv smbd[13162]: Unable to get jobs for 
ipp://localhost/printers/Täst - client-error-not-found
Apr 25 14:42:26 iserv smbd[13162]: Unable to get jobs for 
ipp://localhost/printers/Täääst - client-error-not-found
Apr 25 14:42:36 iserv smbd[13162]: Unable to get jobs for 
ipp://localhost/printers/Täst - client-error-not-found

Maybe Samba should URI encode printernames in the CUPS request (from 
packet dump):

        printer-uri: ipp://localhost/printers/T\303\244st
            Tag: URI
            Name length: 11
            Name: printer-uri
            Value length: 30
            Value: ipp://localhost/printers/T\303\244st
Comment 1 Andreas Schneider 2016-11-11 08:40:25 UTC
Created attachment 12648 [details]
patch for 4.5
Comment 2 Andreas Schneider 2016-11-11 08:41:09 UTC
Created attachment 12649 [details]
patch for 4.4
Comment 3 Jeremy Allison 2016-11-11 19:27:32 UTC
Re-assigning to Karolin for inclusion in 4.5.next, 4.4.next.
Comment 4 Karolin Seeger 2016-11-14 11:27:15 UTC
(In reply to Jeremy Allison from comment #3)
Pushed to autobuild-v4-{4|5}-test.
Comment 5 Karolin Seeger 2016-11-16 07:24:30 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 6 Karolin Seeger 2016-12-05 09:41:31 UTC
HTTP_URI_STATUS_OK does not exist in older cups versions (seems to be HTTP_URI_OK then).
So the patch does not build on older systems.
Comment 7 Karolin Seeger 2016-12-05 10:09:39 UTC
Created attachment 12720 [details]
additional fix to be able to build on systems with older CUPS version
Comment 8 Karolin Seeger 2016-12-05 10:47:32 UTC
(In reply to Karolin Seeger from comment #7)
Gnaa, does not build on rhel7... :-(
Comment 9 Karolin Seeger 2016-12-06 07:43:01 UTC
Planned release date for 4.5.2 is tomorrow.
This patch breaks the build on older systems.
We can either revert it for now or someone provides a patch...
Comment 10 Karolin Seeger 2016-12-06 09:01:14 UTC
The content of attachment 12720 [details] has been deleted for the following reason:

Wrong fix
Comment 11 Andreas Schneider 2016-12-06 09:06:17 UTC
Created attachment 12727 [details]
additional patch for 4.5 and 4.4

Additional patch to support CUPS versions < 1.7
Comment 12 Karolin Seeger 2016-12-07 11:05:48 UTC
(In reply to Andreas Schneider from comment #11)
Pushed to autobuild-{5,4}-test.
Comment 13 Karolin Seeger 2016-12-20 09:05:37 UTC
(In reply to Karolin Seeger from comment #12)
Pushed to both branches.
Closing out bug report.

Thanks!